tools/tests/ui/fail/l1063.cnf
// Test file for error code: L1063
// Expected error: Overflow Constraint character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
